--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,23 +3,60 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Page Title</title>
+    <!-- Change the <title> from "Page Title" to "Howdy World" -->
+    <title>Howdy World!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element  -->
+    <header>
+        <H1>Ian McKenzie Larsen</H1>
+    </header>
+    <div class="main_block">
+        <h1>Affirmation Hypnosis</h1>
+        <div class="parameter_image">
+             <img src="https://i.postimg.cc/BQBYfsjf/83-A5047-F-E673-4661-9-BC4-D5195-C785-F9-B-1-201-a.jpg">
+        </div>
+        <h1>Two Truths and a Lie </h1>
+        <h4>Hover your cursor over to separate fact from fiction!</h4>
+        <div class="twotruthsonelie">
+            <ul>
+            
+                <div class="twotruths">
+                    <li>I have /accidentally/ helped the Yakuza launder money</li>
+                </div>
+                <div class="hideemoji">
+                    <h1>&#128180 🧺 ✨</h1>
+                </div>
+                <div class="onelie">
+                    <li>I have killed a goat with my bare hands</li>
 
-    <!-- Inside the header, add an <h1> element containing your name -->
+                        
+            </div>
+            <div class="hideemoji">
+                <h1>🤜&#128016</h1>
+            </div>
+                <div class="twotruths">
+                    <li>I have had a symphony written for me</li>
+                </div>
+                <div class="hideemoji">
+                    <h1>🎻🎶</h1>
+                </div>
+             </ul>
+        </div>
+    </div>
+    <!-- !!Inside the header, add an <h1> element containing your name -->
+    <!-- I!!nclude an image -->
 
-    <!-- Include an image -->
+    <!-- !!Create an unordered list with 3 list items of fun facts about you -->
 
-    <!-- Create an unordered list with 3 list items of fun facts about you -->
-
-    <!-- Create a footer element -->
-
-    <!-- Inside your footer, put a <p> element with your favorite quote -->
+    <!--!! Create a footer element -->
+<footer>
+    <div class="quote">
+        <h1>When life gives you lemons, don't make lemonade. Make life take the lemons back. Get Mad! I don't want your goddamn lemons. What the hell am I supposed to do with these???</h3>
+    </div>
+</footer>
+    <!--!! Inside your footer, put a <p> element with your favorite quote -->
 </body>
 </html>
